endpoint made and tested, API spec updated
