# docs/openapi.yml
@@ -309,6 +309,41 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /cohorts/{id}:
+    get:
+      tags:
+        - cohort
+      summary: Get cohort
+      description: get all information on cohort
+      operationId: getCohort
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: 'The id of the cohort that needs to be fetched.'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cohort'
+        '400':
+          description: fail
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: fail
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   securitySchemes:
@@ -411,7 +446,7 @@ components:
           type: string
         username:
           type: string
-        mobile: 
+        mobile:
           type: string
         specialism:
           type: string
@@ -466,36 +501,36 @@ components:
           example: success
         data:
           properties:
-                id:
-                  type: integer
-                cohortId:
-                  type: integer
-                role:
-                  type: string
-                firstName:
-                  type: string
-                lastName:
-                  type: string
-                email:
-                  type: string
-                biography:
-                  type: string
-                githubUrl:
-                  type: string
-                profilePicture:
-                  type: string
-                username:
-                  type: string
-                mobile:
-                  type: string
-                specialism:
-                  type: string
-                startDate:
-                  type: string
-                  format: date-time
-                endDate:
-                  type: string
-                  format: date-time
+            id:
+              type: integer
+            cohortId:
+              type: integer
+            role:
+              type: string
+            firstName:
+              type: string
+            lastName:
+              type: string
+            email:
+              type: string
+            biography:
+              type: string
+            githubUrl:
+              type: string
+            profilePicture:
+              type: string
+            username:
+              type: string
+            mobile:
+              type: string
+            specialism:
+              type: string
+            startDate:
+              type: string
+              format: date-time
+            endDate:
+              type: string
+              format: date-time
 
     CreatedUser:
       type: object
@@ -523,8 +558,6 @@ components:
                   type: string
                 githubUrl:
                   type: string
-
- 
 
       login:
         login:
