# src/controllers/cohort.js
@@ -1,4 +1,4 @@
-import { createCohort } from '../domain/cohort.js'
+import { createCohort, getCohort } from '../domain/cohort.js'
 import { sendDataResponse, sendMessageResponse } from '../utils/responses.js'
 
 export const create = async (req, res) => {
@@ -8,5 +8,26 @@ export const create = async (req, res) => {
     return sendDataResponse(res, 201, createdCohort)
   } catch (e) {
     return sendMessageResponse(res, 500, 'Unable to create cohort')
+  }
+}
+
+export const get = async (req, res) => {
+  const cohortId = parseInt(req.params.id)
+  console.log(cohortId)
+
+  if (isNaN(cohortId)) {
+    return sendMessageResponse(res, 400, 'Invalid cohort ID')
+  }
+
+  try {
+    const cohort = await getCohort(cohortId)
+
+    if (!cohort) {
+      return sendMessageResponse(res, 404, 'Cohort not found')
+    }
+
+    return sendDataResponse(res, 200, cohort)
+  } catch (e) {
+    return sendMessageResponse(res, 500, 'Unable to get cohort')
   }
 }
